--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="">
-	<head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Digiprojekti</title>
@@ -26,29 +27,62 @@
             </form>
         </div>
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <script>
         var tunnukset = [];
 
         $.getJSON("https://moodleinquiry.herokuapp.com/open/questions", function(data) {
             var items = [];
+
+
+
             $.each(data, function(key, d) {
-                items.push(d.questionText);
-                items.push("<br><input type=text id=" + d.id + "><br>");
-                tunnukset.push(d.id);
+                items.push("<br>" + d.questionText + "<br>");
+
+                if (d.questionType.type == "Radio") {
+                    for (i = 0; i < d.responseOptions.length; i++) {
+                        items.push("<input type=radio" + " id= " + d.id + " name=" + d.id + " value=" + d.responseOptions[i] + ">" + d.responseOptions[i] + "<br>");
+                    }
+                };
+
+                if (d.questionType.type == "Select") {
+                    items.push("<select name=wwww id=" + d.id + ">");
+                    for (i = 0; i < d.responseOptions.length; i++) {
+                        items.push("<option" + " value=" + d.responseOptions[i] + ">" + d.responseOptions[i] + "<br>")
+
+                    }
+                    items.push("</select><br>");
+                };
+
+                if (d.questionType.type == "Open Text") {
+                    items.push("<input type=text" + " id= " + d.id + " name=" + d.id + "> <br>");
+
+                }
             });
-            $("#pepe").append(items.join(''));
+
+            $("#pepe").append(items.join(""));
+
         });
 
         function laheta() {
             for (i = 0; i < tunnukset.length; i++) {
-                vastaus = document.getElementById(tunnukset[i]).value;
-            }
 
+                tyyppi = document.getElementById(tunnukset[i]).type;
+                var radios = document.getElementsByName(lomakekentta[i]);
+                for (var x = 0, length = radios.length; x < length; x++) {
+                    if (radios[x].checked) {
+                        vastaus = radios[x].value;
+                    }
+                }
+
+
+            }
         }
+
     </script>
 </body>
-</html> 
+
+</html>
