--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="">
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Digiprojekti</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="digiproj.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="./digiproj4.1_files/digiproj.css" media="screen">
 </head>
 
 <body>
 
     <div class="login-wrap">
         <div class="login-html">
-            <form>
 
 
+            <form id="jebe">
                 <div id="pepe">HHMoodle Kysely<br><br></div><br>
 
-
-
-                <button onclick="laheta()">Lähetä</button>
-
+                <button onclick="laheta()" id="vastaus" name="submit" type="submit">Lähetä</button>
 
             </form>
+
+
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="./digiproj4.1_files/jquery.min.js.lataus"></script>
+    <script type="text/javascript" async="" src="./digiproj4.1_files/analytics.js.lataus"></script>
+    <script src="./digiproj4.1_files/jquery-3.3.1.min.js.lataus"></script>
 
     <script>
         var tunnukset = [];
-
+        var items = [];
         $.getJSON("https://moodleinquiry.herokuapp.com/open/questions", function(data) {
-            var items = [];
 
 
 
@@ -64,25 +63,39 @@
             });
 
             $("#pepe").append(items.join(""));
-
         });
 
         function laheta() {
             for (i = 0; i < tunnukset.length; i++) {
+                vastaus = document.getElementById(tunnukset[i]).value;
 
-                tyyppi = document.getElementById(tunnukset[i]).type;
-                var radios = document.getElementsByName(lomakekentta[i]);
-                for (var x = 0, length = radios.length; x < length; x++) {
-                    if (radios[x].checked) {
-                        vastaus = radios[x].value;
-                    }
-                }
-
-
+                alert('{"responseOptions" :"' + vastaus + '" ,"questionText" : {"id" : ' + tunnukset[i] + '}}');
             }
-        }
+
+            //var jsonData = {"responseOptions" : vastaus ,"questionText" : {"id" : tunnukset[i]}
+        }; //
+
+        var myJSON = JSON.stringify(jsonData);
+        alert(myJSON);
+        $.ajax({
+            url: "https://moodleinquiry.herokuapp.com/open/answers",
+            type: 'POST',
+            dataType: 'application/json',
+            contentType: 'application/json',
+            data: myJSON,
+            success: function() {
+                alert('POST completed. Data:' + myJSON)
+            },
+            error: function(xhr, status, error) {
+                console.log(xhr.statusText);
+                console.log(status);
+                console.log(error);
+            },
+
+        });
 
     </script>
+
 </body>
 
 </html>
