--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Digiprojekti</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./digiproj4.1_files/digiproj.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./digiproj4.1_files/tyyli.css" media="screen">
 </head>
 
 <body>
