--- a/kiitos.html
+++ b/kiitos.html
@@ -12,12 +12,12 @@
 
 <body>
 
-    
+
     <div id="text">Kiitos vastaamisesta!</div>
 
     <div class="painike">
 
-        <button onclick="#">Siirry vastauksiin</button>
+        <button><a href="pie.html" >Katso tuloksia</a></button>
 
     </div>
 
